# jax_native_flash_attn

./: README.md  pyproject.toml
benchmarks/: benchmark_flash_attention.py
src/jax_native_flash_attn/: __init__.py  _flash_attention.py  flash_attention.py
tests/: test_flash_attention.py
